fix about image stretching on responsive views

--- a/styles/home.css
+++ b/styles/home.css
@@ -59,6 +59,7 @@
         float: initial;
         display: block;
         margin: 0 auto;
+        max-height: initial;
     }
 }
 
